Add delete user method, add find user by Id Email
